RESOLVED FIXED311473
Fix LayoutRange::floorMinEdgeTo() implementation
https://bugs.webkit.org/show_bug.cgi?id=311473
Summary Fix LayoutRange::floorMinEdgeTo() implementation
Chris Dumez
Reported 2026-04-04 04:46:40 PDT
Fix LayoutRange::floorMinEdgeTo() implementation.
Attachments
Chris Dumez
Comment 1 2026-04-04 04:48:38 PDT
EWS
Comment 2 2026-04-04 07:16:13 PDT
Committed 310571@main (ab5f789c9734): <https://commits.webkit.org/310571@main> Reviewed commits have been landed. Closing PR #62031 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-04 07:17:15 PDT
Note You need to log in before you can comment on or make changes to this bug.