Drop unused LayoutRange::floorMinEdgeTo() https://bugs.webkit.org/show_bug.cgi?id=311473

Reviewed by Alan Baradlay.

Drop unused LayoutRange::floorMinEdgeTo(). Its implementation was not
correct, it was identical to LayoutRange::floorMaxEdgeTo().

* Source/WebCore/platform/graphics/LayoutRange.h:
(WebCore::LayoutRange::floorMinEdgeTo):

Canonical link: https://commits.webkit.org/310571@main